--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Jane Doe</h2>
-    <img src="/Images/WhatsApp Image 2024-06-11 at 17.56.52_9889a599.jpg" alt="profile picture" width="180px" height="205px">
+    <img src="./Images/20230505_130443157_iOS.jpg" alt="profile picture" width="180px" height="205px">
     <h3>Summary</h3>
     <p>I am a hardworking and dedicated individual with
      experience in customer service and administration.
