--- a/Hobbies.html
+++ b/Hobbies.html
@@ -14,5 +14,9 @@
         <li>Motorcycling</li>
     </ol>
     <hr>
+    
+    <ul>
+        <li><a href="./index.html">Home</a></li>
+    </ul>
 </body>
 </html>
