--- a/Contact.html
+++ b/Contact.html
@@ -13,5 +13,9 @@
     <p>myemail@gmail.com</p>
     <hr>
 
+    <ul>
+        <li><a href="./index.html">Home</a></li>
+    </ul>
+
 </body>
 </html>
