--- a/Hobbies.html
+++ b/Hobbies.html
@@ -9,14 +9,13 @@
     <hr>
     <h4>My Hobbies</h4>
     <ol>
-        <li>Beer brewing</li>
-        <li>Martial arts</li>
-        <li>Motorcycling</li>
+        <li>Dancing</li>
+        <li>Music</li>
+        <li>Candy Crush</li>
     </ol>
     <hr>
     
-    <ul>
-        <li><a href="./index.html">Home</a></li>
-    </ul>
+    <a href="./index.html">Homepage</a>
+
 </body>
 </html>
