--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 </head>
 <body>
     <hr>
-    <h2>Jane Doe</h2>
+    <h2>Stephanie Ani</h2>
     <img src="./Images/20230505_130443157_iOS.jpg" alt="profile picture" width="180px" height="205px">
     <h3>Summary</h3>
     <p>I am a hardworking and dedicated individual with
-     experience in customer service and administration.
+     experience in software development and soft life.
     </p> 
     <hr>
 
     <h3>Education</h3>
     <ul>
         <li>
-            Bachelor of Arts, Business Administration - University of XYZ (2010-2014)
+            Bachelor of Law - University of Nigeria (2018-2024)
         </li>
     </ul>
     <hr>
@@ -26,31 +26,32 @@
     <h3>Work Experience</h3>
     <ul>
         <li>
-            <b>Customer Service Representative - ABC Inc.</b> 
+            <b>Software Developer - Google Inc </b> 
         </li>
-        <p>June 2014 - May 2018</p>
-        <ul style="list-style-type: circle;">
-            <li>Answered customer inquiries via phone and email</li>
-            <li>Resolved customer complaints and issues</li>
-            <li>Maintained customer records and updated account information</li>
+        <p>June 2022 - May 2024</p>
+        <ul>
+            <li>Analyzed functionality and troubleshoot issues</li>
+            <li>Software testing</li>
+            <li>Specialized in code reviews</li>
         </ul>
     </ul> <hr>
 
     <ul>
         <li>
-            <b>Administrative Assistant - XYZ Corp.</b> 
+            <b>Senior Software Developer - Microsoft</b> 
         </li>
-        <p>June 2018 - Present</p>
-        <ul style="list-style-type: circle;">
-            <li>Assisted with scheduling appointments and meetings</li>
-            <li>Managed incoming and outgoing mail and correspondence</li>
-            <li>Pepared reports and presentations using Microsoft Office Suite</li>
+        <p>June 2024 - Present</p>
+        <ul>
+            <li>Designed software architecture</li>
+            <li>Developed and maintained software automation</li>
+            <li>Exceptional leadership capabilities</li>
+            
         </ul>
     </ul><hr>
 
     <h3>Skills</h3>
     <ul>
-        <li>Customer Service: 
+        <li>Work Ethics: 
             <img src="./Images/star.png" alt="star rating" width="15px" height="15px">
             <img src="./Images/star.png" alt="star rating" width="15px" height="15px">
             <img src="./Images/star.png" alt="star rating" width="15px" height="15px">
@@ -58,7 +59,7 @@
             <img src="./Images/star.png" alt="star rating" width="15px" height="15px">
         </li>
 
-        <li>Microsoft Office Suite:
+        <li>Team Building:
             <img src="./Images/star.png" alt="star rating" width="15px" height="15px">
             <img src="./Images/star.png" alt="star rating" width="15px" height="15px">
             <img src="./Images/star.png" alt="star rating" width="15px" height="15px">
@@ -74,7 +75,7 @@
 
     <h3>Awards and Certifications</h3>
     <ul>
-        <li>Emplpyee of the Month - ABC Inc. (August 2016)</li>
+        <li>Emplpyee of the Month - Google Inc. (August 2023)</li>
     </ul> <hr>
 
     <h3>Other</h3>
@@ -82,7 +83,7 @@
         <li><a href="./Hobbies.html">My Hobbies</a></li>
         <li><a href="./Contact.html">Contact Me</a></li>
     </ul>
-    <img src="./Images/copyright.png" alt="" width="13px" height="13px"><span> Jane Doe. All rights reserved.</span>
+    <img src="./Images/copyright.png" alt="" width="13px" height="13px"><span> Stephanie Ani. All rights reserved.</span>
      
 </body>
 </html>
